--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "js-base64": "^3.7.2",
+    "pinyin": "^2.10.2",
     "sass-loader": "^10.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
