--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
+    "@better-scroll/observe-dom": "^2.4.2",
+    "@better-scroll/slide": "^2.4.2",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "js-base64": "^3.7.2",
