--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@better-scroll/slide": "^2.4.2",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "good-storage": "^1.1.1",
     "js-base64": "^3.7.2",
     "sass-loader": "^10.0.1",
     "vue": "^3.0.0",
@@ -35,8 +36,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.26.5",
-    "pinyin": "^2.10.2"
-
+    "pinyin": "^2.10.2",
+    "sass": "^1.26.5"
   }
 }
